fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,8 @@ body {
 #visualRedesign{
   margin-left: 20px;
   margin-right: 20px;
+  display: flex;
+  flex-direction: column;
 }
 #responsiveRedesign{
   margin-left: 20px;
